[gd_scene load_steps=13 format=2]

[ext_resource path="res://Traps/FallingPlatform/FallingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Assets/Traps/Falling Platforms/On (32x10).png" type="Texture" id=2]
[ext_resource path="res://Assets/Traps/Falling Platforms/Off.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 10 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "on",
"speed": 16.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "off",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 2.5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15, 1 )

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "shaking"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ), Vector2( 1, 0 ), Vector2( -1, 0 ) ]
}

[node name="FallingPlatform" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "on"
frame = 3
playing = true

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 6 )

[node name="Area2D" type="Area2D" parent="."]

[node name="AreaCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -6 )
shape = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/shaking = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
